--- a/src/main/resources/client/index.html
+++ b/src/main/resources/client/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Svelte + TS</title>
+    <title>Roster Managements</title>
+    <script>import "./app.css"</script>
   </head>
   <body>
     <div id="app"></div>
